--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1,42 +1,62 @@
 {% extends "base.html" %}
-{% set titulo = "Cadastro de Produto" %}
+
+{% set titulo= "Cadastro de Produto" %}
+
 {% block conteudo %}
-<h1 class="display-6">{{titulo}}</h1>
-<form action="/post_cadastro" method="post"></form>
-<div class="mb-3 form-floating">
-    <input class="form-control" type="text" name="nome" id="nome" placeholder=" ">
-    <label class="form-label" for="nome">Nome Completo</label>
-</div>
+<form action="/post_cadastro" method="post">
+    <div class="mb-2 form-floating">
+        <input
+            class="form-control"
+            type="text"
+            name="nome"
+            id="nome"
+            placeholder=" ">
+        <label class="form-label text-dark" for="nome">Nome</label>
+    </div>
+    <div class="mb-2 form-floating">
+        <input
+            class="form-control"
+            type="text"
+            name="descricao"
+            id="descricao"
+            placeholder=" ">
+        <label class="form-label text-dark" for="descricao">Descrição</label>
+    </div>
+    <div class="mb-2 form-floating">
+        <input
+            class="form-control"
+            type="text"
+            name="estoque"
+            id="estoque"
+            placeholder=" ">
+        <label class="form-label text-dark" for="estoque">Estoque</label>
+    </div>
+    <div class="mb-2 form-floating">
+        <input
+            class="form-control"
+            type="text"
+            name="preco"
+            id="preco"
+            placeholder=" ">
+        <label class="form-label text-dark" for="preco">Preço</label>
+    </div>
 
-<div class="mb-3 form-floating">
-    <input class="form-control" type="text" name="descricao" id="descricao" placeholder=" ">
-    <label class="form-label" for="descricao">Descrição Produto</label>
-</div>
+    <div class="mb-3 form-floating">
+        <select class="form-select" id="categoria" name="categoria" aria-label="Selecione a categoria">
+            <option value="" selected>Selecione a categoria</option>
+            <option value="Alimentos">Alimentos</option>
+            <option value="Limpeza">Limpeza</option>
+            <option value="Eletrônicos">Eletrônicos</option>
+            <option value="Brinquedos">Brinquedos</option>
+            <option value="Vestuário">Vestuário</option>
+            <option value="Automotivo">Automotivo</option>
+            <option value="Esporte&Lazer">Esporte & Lazer</option>
+        </select>
+        <label class="form-label text-dark" for="categoria">Categoria</label>
+    </div>
 
-<div class="mb-3 form-floating">
-    <input class="form-control" type="text" name="estoque" id="estoque" placeholder=" ">
-    <label class="form-label" for="estoque">Estoque Produto</label>
-</div>
-
-<div class="mb-3 form-floating">
-    <input class="form-control" type="number" name="preco" id="preco" placeholder=" ">
-    <label class="form-label" for="preco">Preço</label>
-</div>
-
-<form action="#" method="post">
-    <label for="categoria">Categoria:</label>
-    <select name="categoria" id="categoria" required>
-        <option value="alimentos">Alimentos</option>
-        <option value="limpeza">Limpeza</option>
-        <option value="eletronicos">Eletrônicos</option>
-        <option value="brinquedos">Brinquedos</option>
-        <option value="vestuario">Vestuário</option>
-        <option value="automotivo">Automotivo</option>
-        <option value="esporte_lazer">Esporte & Lazer</option>
-    </select>
-    <br><br>
-    <input type="submit" value="Enviar">
+    <div class="mb-3">
+        <button class="btn btn-outline-dark rounded-3 my-3 shadow" type="submit">Cadastrar</button>
+    </div>
 </form>
-
-
 {% endblock %}
