passo 8 com menu implementado

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% set titulo= "Cadastro de Produto" %}
+{% set css_cadastro= "active" %}
+
 
 {% block conteudo %}
 <form action="/post_cadastro" method="post">
