--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
-{% extends "base.html" %}
-{% set titulo = "Página Principal" %}
+{% extends "base.html"%}
+
+{% set titulo="Página Principal" %}
+{% set css_principal= "active" %}
+
 {% block conteudo %}
-<p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
-    quo quam nihil, laborum suscipit ipsum deleniti omnis, aliquam dicta dolor
-    sapiente cumque impedit assumenda reiciendis id magnam! Itaque, ex cum!
+<p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quo quam nihil, laborum suscipit ipsum
+    deleniti omnis, aliquam dicta dolor sapiente cumque impedit assumenda reiciendis id magnam! Itaque, ex cum!
 </p>
 {% endblock %}
