--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
     <main class="container">
         <h1 class="display-6">{{ titulo }}</h1>
         <hr>
+        <a class="btn btn-outline-dark rounded-0 my-3 shadow {{css_cadastro}}" href="/cadastro">Cadastro</a>
+        <hr>
         {% block conteudo %}
         {% endblock %}
     </main>
